tests/rascal/negative/type_errors/L1/15_expression_ES10_D4_76.ob
MODULE Test15;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               p := ((((x * 1223) = (y + 0)) OR ((~ q) OR (z >= 1223))) OR ((+ (2 DIV 200)) <= ((0 MOD 200) DIV (+ 200))));
               x := ((((1 * 0) MOD (- x)) DIV ((x * 1) + (200 MOD x))) MOD ((- (- 1223)) + ((0 * 0) + (200 MOD z))));
               p := (~ ((- (z * z)) > (- (2 DIV 200))));
               r := (((- (1223 + 200)) > ((+ 200) DIV (+ 1))) & (((1223 * 1223) MOD (0 - 0)) <= ((x DIV y) - (+ y))));
  (* error *)  z := ((((+ q) - (0 + 1223)) - ((- y) * (+ x))) * (((- 2) - (2 DIV y)) + ((2 + 200) - (0 + x))));
               z := ((- ((- 2) - (z + y))) MOD (((z + 1223) DIV (1 + 200)) + (- (+ z))));
               x := ((+ ((1 * 1223) * (y DIV z))) - (- ((200 DIV 1223) * (z - 200))));
               y := (((+ (0 + 1223)) * ((200 - 200) * (- y))) - ((- (x DIV 0)) * (+ (+ 1))));
               r := ((- (- (2 DIV 1))) >= (((1223 DIV 1223) * (1 * 2)) DIV ((+ 1223) - (z DIV 1223))));
               r := ((- (+ (200 + z))) >= (((z DIV z) + (x + z)) * ((x - y) MOD (2 - 2))))
END Test15.